Añadido a revisión todas las aplicaciones que no pueden ser utilizadas por la aplicación web y mejorado el scraper para detectar y mejorar los instaladores de las páginas.
